BJS2-70771 fixes based on review