@@ -3,7 +3,6 @@ package school.faang.bjs2_70771;
 import java.util.Comparator;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class ListOperations {
 
@@ -35,13 +34,13 @@ public class ListOperations {
     public static List<String> filterStringsContainingSubstring(List<String> numbers, String string) {
         return numbers.stream()
                 .filter(s -> s.contains(string))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> sortByLength(List<String> strings) {
         return strings.stream()
                 .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static boolean allMatchCondition(List<Integer> numbers, Predicate<Integer> condition) {
@@ -59,6 +58,6 @@ public class ListOperations {
     public static List<Integer> convertToLengths(List<String> strings) {
         return strings.stream()
                 .map(String::length)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
